--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-   <!-- <font color=green>
+   <font color=green>
       <h1>Welcome!</h1>
-   </font> -->
+   </font>
    <div>
       <img
          src="https://images.pexels.com/photos/620337/pexels-photo-620337.jpeg?cs=srgb&dl=pexels-tobi-620337.jpg&fm=jpg"
